# upstart

./: .bzrignore  AUTHORS  ChangeLog  ChangeLog.nih  HACKING  Makefile.am  Makefile.in  NEWS  README  README.tests  TESTING.sessions  TODO  aclocal.m4  config.h.in  configure  configure.ac  patch.txt
.pc/: applied-patches
compat/sysv/: Makefile.am  Makefile.in  reboot.c  runlevel.c  shutdown.c  telinit.c
compat/sysv/man/: reboot.8  runlevel.8  shutdown.8  telinit.8
conf/: Makefile.am  Makefile.in  rc-sysinit.conf  rc.conf
contrib/: Makefile.am  Makefile.in
dbus/: Makefile.am  Makefile.in  Upstart.conf  Upstart.conf.upstream  com.ubuntu.Upstart.Instance.xml  com.ubuntu.Upstart.Job.xml  com.ubuntu.Upstart.xml  org.freedesktop.DBus.xml  upstart.h
debian/: 01-upstart-lsb  README.Debian  apparmor-profile-load  changelog  control  copyright  libupstart-dev.install  libupstart1.install  libupstart1.symbols  migrate-inittab.pl  rules  startup-tasks.dirs  startup-tasks.preinst  sulogin  system-services.dirs  system-services.postinst  system-services.preinst  upstart-bin.apport  upstart-bin.dirs  upstart-bin.install  upstart-bin.upstart.cron.daily  upstart-compat-sysv.dirs  upstart-compat-sysv.install  upstart-compat-sysv.postinst  upstart-compat-sysv.postrm  upstart-compat-sysv.preinst  upstart-core.install  upstart-core.maintscript  upstart-core.postinst  upstart-dconf-bridge.install  upstart-dconf-bridge.manpages  upstart-job  upstart-logd.install  upstart-logd.preinst  upstart-monitor.install  upstart-monitor.manpages  upstart-sysv.install  upstart-xsessions  upstart.apport  upstart.bash-completion  (+12 more)
doc/: Makefile.am  Makefile.in  states.dot
event.d/: Makefile.am  Makefile.in  logd
extra/: Makefile.am  Makefile.in  com.ubuntu.Upstart.xml  org.freedesktop.systemd1.xml  upstart-dbus-bridge.c  upstart-dconf-bridge.c  upstart-event-bridge.c  upstart-events-bridge.c  upstart-file-bridge.c  upstart-local-bridge.c  upstart-socket-bridge.c  upstart-systemd-job-event-bridge.c  upstart-text-bridge.c  upstart-udev-bridge.c
extra/conf/: upstart-dbus-bridge.conf  upstart-event-bridge.conf  upstart-file-bridge.conf  upstart-socket-bridge.conf  upstart-udev-bridge.conf
extra/conf-session/: upstart-dbus-session-bridge.conf  upstart-dbus-system-bridge.conf  upstart-dconf-bridge.conf  upstart-event-bridge.conf  upstart-file-bridge.conf  upstart-udev-bridge.conf
extra/man/: dbus-event.7  dconf-event.7  file-event.7  socket-event.7  upstart-dbus-bridge.8  upstart-dconf-bridge.8  upstart-event-bridge.8  upstart-file-bridge.8  upstart-local-bridge.8  upstart-socket-bridge.8  upstart-text-bridge.8  upstart-udev-bridge.8
init/: Makefile.am  Makefile.in  apparmor.c  apparmor.h  blocked.c  blocked.h  cfgfile.c  cfgfile.h  cgroup.c  cgroup.h  conf.c  conf.h  control.c  control.h  enum.c  enum.h  environ.c  environ.h  errors.h  event.c  event.h  event_operator.c  event_operator.h  events.h  init.supp  job.c  job.h  job_class.c  job_class.h  job_process.c  job_process.h  log.c  log.h  main.c  notify.c  notify.h  parse_conf.c  parse_conf.h  parse_job.c  parse_job.h  (+13 more)
init/man/: control-alt-delete.7  init.5  init.8  inittab.5  keyboard-request.7  power-status-changed.7  session-end.7  started.7  starting.7  startup.7  stopped.7  stopping.7
init/tests/: libwrap_inotify.la  test_blocked.c  test_cfgfile.c  test_cgroup.c  test_conf.c  test_conf_preload.sh.in  test_conf_static.c  test_control.c  test_enum.c  test_environ.c  test_event.c  test_event_operator.c  test_job.c  test_job_class.c  test_job_process.c  test_log.c  test_main.c  test_notify.c  test_parse_conf.c  test_parse_job.c  test_process.c  test_process_handle.hh  test_state.c  test_system.c  test_util.c  test_util.h  test_xdg.c  wrap_inotify.c
init/tests/data/: session-init-no-job-environ.json  session-init-with-job-environ.json  session-init-with-modified-job-environ.json  upstart-1.11.json  upstart-1.13.json  upstart-1.6.json  upstart-1.8+apparmor.json  upstart-1.8+full_serialisation+apparmor.json  upstart-1.8+full_serialisation-apparmor.json  upstart-1.8.json  upstart-1.9.json  upstart-no-job-environ.json  upstart-pre-security.json  upstart-session-infinity.json  upstart-session.json  upstart-session2.json
initctl/: Makefile.am
lib/: Makefile.am  Makefile.in  libupstart-abi.xml.in  libupstart.la  libupstart.la.moved  libupstart.pc.in  libupstart.pc.in.in  libupstart.ver  run_abi_checker.sh.in  upstart.h
logd/: Makefile.am  Makefile.in  main.c
logd/event.d/: logd.in
logd/jobs.d/: logd.in
logd/man/: logd.8
m4/: Makefile.in
man/: Makefile.am  Makefile.in  logd.8  start.8  sulogin.8  telinit.8
nih/: Makefile.in
nih-dbus/: Makefile.in
nih-dbus-tool/: Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.gmo  ca.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  fr.gmo  fr.po  sv.gmo  sv.po  upstart.pot
rc.d/: Makefile.am
scripts/: Makefile.am  Makefile.in  init-checkconf.sh  initctl2dot.py  python-upstart.py  pyupstart.py  pyupstart.py.in  upstart-monitor.py
scripts/data/: Makefile.am  Makefile.in  upstart-monitor.desktop
scripts/man/: init-checkconf.8  initctl2dot.8  upstart-monitor.8
scripts/tests/: test_pyupstart_session_init.py  test_pyupstart_system_init.py
test/: Makefile.am  Makefile.in  test_util.c  test_util.h  test_util_common.c  test_util_common.h
test/tests/: test_util_check_env.c
udev/: Makefile.am  Makefile.in  upstart-udev-bridge.c
upstart/: Makefile.am  Makefile.in  control.c  control.h  enum.c  enum.h  errors.h  job.c  job.h  libupstart.h  libupstart.ver  message.c  message.h  wire.c  wire.h
upstart/tests/: test_control.c  test_enum.c  test_job.c  test_message.c  test_wire.c
util/: Makefile.am  Makefile.in  events.c  events.h  initctl.c  initctl.h  jobs.c  jobs.h  reboot.c  runlevel.c  shutdown.c  start.c  sysv.c  sysv.h  telinit.c  util.supp  utmp.c  utmp.h
util/man/: initctl.8  reboot.8  runlevel.7  runlevel.8  shutdown.8  telinit.8
util/tests/: test_events.c  test_initctl.c  test_jobs.c  test_sysv.c  test_telinit.c  test_user_sessions.sh  test_utmp.c
(+93 files in other folders)
